--- a/Projeto_03/css/style.css
+++ b/Projeto_03/css/style.css
@@ -173,6 +173,9 @@ section.sessao1 .container{
     background-size: 100% 100%;
 }
 
+
+/*SESSAO 2*/
+
 section.sessao2{
     padding-right: 2%;
     padding-left: 2%;
@@ -200,6 +203,8 @@ section.sessao2 .container{
     width: 100%;
     margin-top: 10px;
 }
+
+/*SESSAO 3*/
 
 section.sessao3{
     width: 100%;
@@ -301,6 +306,36 @@ section.sessao3 .container{
     background-color: #ff285a;
 }
 
+/*SESSAO 4*/
+
+section.sessao4{
+    background-color: #F7F7F7;
+    padding: 100px 2%;
+}
+
+.entre-em-contato{
+    width: 50%;
+    float: left;
+}
+
+.entre-em-contato form input[type=text]{
+    width: 100%;
+    max-width: 480px;
+    margin-top: 5px;
+    height: 58px;
+    padding-left: 8px;
+    line-height: 58px;
+    border: 1px solid rgb(230,230,230);
+}
+
+.entre-em-contato form textarea{
+    width: 100%;
+    max-width: 480px;
+
+    padding-left: 8px;
+    line-height: 58px;
+    border: 1px solid rgb(230,230,230);
+}
 
 /*MEDIAS QUERIES*/
 
