--- a/Projeto_03/css/style.css
+++ b/Projeto_03/css/style.css
@@ -31,10 +31,12 @@ header{
 }
 
 header .logo{
-    width: 150px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     float: left;
-    background-color: white;
+    background-image: url(../images/logo.png);
+    background-size: 100% 100%;
+    background-color: transparent;
 }
 
 header nav{
@@ -201,7 +203,7 @@ section.sessao2 .container{
     position: relative;
     top: 70px;
     width: 100%;
-    margin-top: 10px;
+    box-shadow: 11px 10px 22px 1px rgba(0,0,0,0.26);
 }
 
 /*SESSAO 3*/
@@ -217,7 +219,7 @@ section.sessao3 .container{
 .parte1{
     width: 50%;
     float: left;
-    padding: 140px 0 90px 0;
+    padding: 140px 0 95px 0;
     text-align: justify;
     color: white;
     background-color: #FFCB40;
@@ -268,7 +270,9 @@ section.sessao3 .container{
     height: 55px;
     margin-left: 10px;
     border-radius: 20px;
-    background-color: #0A0A42;
+    background-image: url(../images/perfil.jpg);
+    background-size: 100% 100%;
+    background-color: transparent;
 }
 
 .titulo-autor h2{
@@ -309,7 +313,8 @@ section.sessao3 .container{
 /*SESSAO 4*/
 
 section.sessao4{
-    background-color: #F7F7F7;
+    background-color: #0A0A42;
+    color: white;
     padding: 100px 2%;
 }
 
@@ -331,7 +336,7 @@ section.sessao4{
     height: 58px;
     padding-left: 8px;
     line-height: 58px;
-    border: 1px solid rgb(230,230,230);
+    border: 2px solid gray;
 }
 
 .entre-em-contato form textarea{
@@ -342,14 +347,15 @@ section.sessao4{
     padding-left: 8px;
     line-height: 50px;
     resize: none;
-    border: 1px solid rgb(230,230,230);
+    border: 2px solid gray;
 }
 
 .entre-em-contato form input[type=submit]{
     width: 165px;
     height: 44px;
     color: white;
-    background-color:#0A0A42;
+    font-weight: bolder;
+    background-color:#FFCB40;
     cursor: pointer;
     margin-top: 30px;
     border-radius: 30px;
@@ -365,6 +371,7 @@ section.sessao4{
 
 .map-wraper h2{
     font-size: 23px;
+    padding-bottom: 12px;
 }
 
 .map-wraper2{
@@ -390,6 +397,20 @@ section.sessao4{
     height: 100%;
     background-color: white;
     border: 3px solid grey;
+}
+
+footer{
+    padding: 40px 2%;
+    font-weight: bold;
+    background-color: #F7F7F7;
+}
+
+footer p:nth-of-type(1){
+    float: left;
+}
+
+footer p:nth-of-type(2){
+    float: right;
 }
 
 /*MEDIAS QUERIES*/
@@ -500,7 +521,12 @@ section.sessao4{
         width: 100%;
     }
 
+    .entre-em-contato h2{
+        text-align: center;
+    }
+
     .entre-em-contato p{
+        padding-bottom: 12px;
         display: inline-block;
         float: none;
     }
@@ -548,4 +574,18 @@ section.sessao4{
         top: 16px;
         margin-top: 20px;
     }
+
+    
+    footer .container p{
+		text-align: center;
+	}
+
+	footer p:nth-of-type(1){
+	    float: none;
+	}
+
+	footer p:nth-of-type(2){
+		float: none;
+		margin-top:8px;
+	}
 }
